# chess-engine-harmon

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
examples/: terminal.rs
src/: lib.rs  piece.rs  position.rs  square.rs
src/board/: builder.rs  castling_rights.rs  mod.rs  types.rs
src/fmt/: mod.rs  pgn.rs
src/game/: builder.rs  clock.rs  mod.rs  options.rs  result.rs  types.rs
src/game/metadata/: date.rs  location.rs  mod.rs  player.rs
