[package]
name = "chess-engine-harmon"
version = "0.2.0"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>", "Christian Visintin <christian dot visintin at gmail dot com>"]
edition = "2018"
description = "Harmon variation of the chess-engine crate."
documentation = "https://docs.rs/chess-engine-harmon/"
readme = "README.md"
homepage = "https://github.com/veeso/chess-engine-harmon"
repository = "https://github.com/veeso/chess-engine-harmon"
license = "MIT"
keywords = ["chess", "engine", "game", "board", "ai"]
categories = [
    "games",
    "no-std",
    "game-engines",
    "game-development",
    "algorithms"
]

[dev-dependencies]
pretty_assertions = "0.7.2"
