[package]
name = "harmon"
version = "0.2.0"
authors = ["Christian Visintin <christian dot visintin at gmail dot com>", "Adam McDaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
description = "A feature-rich chess engine library, designed to run everywhere."
documentation = "https://docs.rs/harmon/"
readme = "README.md"
homepage = "https://github.com/veeso/harmon"
repository = "https://github.com/veeso/harmon"
license = "MIT"
keywords = ["chess", "engine", "game", "board", "ai"]
categories = [
    "games",
    "no-std",
    "game-engines",
    "game-development",
    "algorithms"
]

[dev-dependencies]
pretty_assertions = "0.7.2"
